<?xml version="1.0" encoding="UTF-8"?>
<!--

	Copyright (c) 2021, 2022 Contributors to Eclipse Foundation.
    Copyright (c) 1997, 2020 Oracle and/or its affiliates and others.
    All rights reserved.

    This program and the accompanying materials are made available under the
    terms of the Eclipse Public License v. 2.0, which is available at
    http://www.eclipse.org/legal/epl-2.0.

    This Source Code may also be made available under the following Secondary
    Licenses when the conditions for such availability set forth in the
    Eclipse Public License v. 2.0 are satisfied: GNU General Public License,
    version 2 with the GNU Classpath Exception, which is available at
    https://www.gnu.org/software/classpath/license.html.

    SPDX-License-Identifier: EPL-2.0 OR GPL-2.0 WITH Classpath-exception-2.0

-->

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.eclipse.ee4j</groupId>
        <artifactId>project</artifactId>
        <version>1.0.6</version>
        <relativePath/>
    </parent>

    <groupId>org.glassfish.wasp</groupId>
    <artifactId>wasp</artifactId>
    <version>3.1.0-SNAPSHOT</version>

    <name>WaSP</name>
    <description>Eclipse compatible implementation of Jakarta Server Pages</description>
    <url>https://projects.eclipse.org/projects/ee4j.wasp</url>

    <developers>
        <developer>
            <id>jakarta-ee4j-wasp</id>
            <name>WaSP Developers</name>
            <organization>Eclipse Foundation</organization>
            <email>wasp-dev@eclipse.org</email>
        </developer>
    </developers>
    <contributors>
       <contributor>
           <name>WaSP Contributors</name>
           <email>wasp-dev@eclipse.org</email>
           <url>https://github.com/eclipse-ee4j/wasp/graphs/contributors</url>
       </contributor>
    </contributors>

    <mailingLists>
        <mailingList>
            <name>Jakarta Server Pages dev mailing list</name>
            <post>wasp-dev@eclipse.org</post>
            <subscribe>https://dev.eclipse.org/mailman/listinfo/wasp-dev</subscribe>
            <unsubscribe>https://dev.eclipse.org/mailman/listinfo/wasp-dev</unsubscribe>
            <archive>https://dev.eclipse.org/mhonarc/lists/wasp-dev</archive>
        </mailingList>
    </mailingLists>

    <scm>
        <connection>scm:git:https://github.com/eclipse-ee4j/wasp.git</connection>
        <developerConnection>scm:git:ssh://git@github.com/eclipse-ee4j/wasp.git</developerConnection>
        <url>https://github.com/eclipse-ee4j/wasp</url>
        <tag>HEAD</tag>
    </scm>
    <issueManagement>
        <system>github</system>
        <url>https://github.com/eclipse-ee4j/wasp/issues</url>
    </issueManagement>

    <dependencies>
        <!-- Jakarta EE Dependencies -->
        <dependency>
            <groupId>jakarta.servlet.jsp</groupId>
            <artifactId>jakarta.servlet.jsp-api</artifactId>
            <version>3.1.0</version>
        </dependency>
        <dependency>
            <groupId>jakarta.servlet</groupId>
            <artifactId>jakarta.servlet-api</artifactId>
            <version>6.0.0</version>
        </dependency>
        <dependency>
            <groupId>jakarta.el</groupId>
            <artifactId>jakarta.el-api</artifactId>
            <version>5.0.0</version>
        </dependency>
    </dependencies>

    <build>
        <resources>
            <resource>
                <directory>src/main/java</directory>
                <includes>
                    <include>**/*.properties</include>
                    <include>**/*.xml</include>
                </includes>
            </resource>
            <resource>
                <directory>${project.basedir}/..</directory>
                <includes>
                    <include>LICENSE.md</include>
                    <include>NOTICE.md</include>
                </includes>
                <targetPath>META-INF</targetPath>
            </resource>
            <resource>
                <directory>src/main/resources</directory>
            </resource>
        </resources>
        <plugins>
            <!-- Sets minimal Maven version to 3.6.0 -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <version>3.0.0</version>
                <executions>
                    <execution>
                        <id>enforce-maven</id>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <requireMavenVersion>
                                    <version>3.6.0</version>
                                </requireMavenVersion>
                            </rules>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            
            <!-- Restricts the Java version to 11 -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.10.1</version>
                <configuration>
                    <source>11</source>
                    <target>11</target>
                    <compilerArgument>-Xlint:unchecked</compilerArgument>
                </configuration>
            </plugin>

             <!-- Creates the OSGi MANIFEST.MF file -->
            <plugin>
                <groupId>org.apache.felix</groupId>
                <artifactId>maven-bundle-plugin</artifactId>
                <version>5.1.4</version>
                <configuration>
                    <instructions>
                        <Automatic-Module-Name>org.glassfish.wasp</Automatic-Module-Name>
                        <Extension-Name>org.glassfish.wasp.wasp</Extension-Name>
                        <Bundle-SymbolicName>org.glassfish.wasp.wasp</Bundle-SymbolicName>
                        <Bundle-Version>${project.version}</Bundle-Version>
                        <Bundle-Name>WaSP Jakarta Server Pages Implementation ${project.version}</Bundle-Name>
                        <Bundle-Description>Eclipse Jakarta Server Pages Implementation (jakarta.pages/3.1) ${project.version}</Bundle-Description>  
                        
                        <Specification-Title>Jakarta Server Pages</Specification-Title>
                        <Specification-Version>3.0</Specification-Version>
                        <Specification-Vendor>Eclipse Foundation</Specification-Vendor>
                            
                        <Implementation-Version>${project.version}</Implementation-Version>
                        <Implementation-Vendor>Eclipse Foundation</Implementation-Vendor>
                        
                        <_include>-osgi.bundle</_include>
                    </instructions>
                </configuration>
                <executions>
                    <execution>
                        <id>bundle-manifest</id>
                        <phase>process-classes</phase>
                        <goals>
                            <goal>manifest</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <!-- Adds the manifest file created by the org.apache.felix:maven-bundle-plugin -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.2.2</version>
                <configuration>
                    <archive>
                        <manifestFile>
                            ${project.build.outputDirectory}/META-INF/MANIFEST.MF
                        </manifestFile>
                    </archive>
                </configuration>
            </plugin>
            
            <!-- Configure the jar with the sources. -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.2.1</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <!-- Create Javadoc for API jar -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.4.0</version>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                        <configuration>
                            <source>11</source>
                            <additionalJOption>-Xdoclint:none</additionalJOption>
							<excludePackageNames>org.glassfish.wasp.util</excludePackageNames>
							<quiet>true</quiet>
                            <groups>
                                <group>
                                    <title>WaSP ${project.version}</title>
                                    <packages>org.glassfish.wasp</packages>
                                    <packages>org.glassfish.jsp.api</packages>
                                </group>
                            </groups>
                            <bottom><![CDATA[
Comments to: <a href="mailto:wasp-dev@eclipse.org">wasp-dev@eclipse.org</a>.<br>
Copyright &#169; 2018, 2022 Eclipse Foundation. All rights reserved.<br>
Use is subject to <a href="http://www.eclipse.org/legal/epl-2.0" target="_top">license terms</a>.]]>
                            </bottom>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
